tests/baselines/reference/regExpWithOpenBracketInCharClass(target=es5).errors.txt
regExpWithOpenBracketInCharClass.ts(3,8): error TS1501: This regular expression flag is only available when targeting 'es6' or later.
regExpWithOpenBracketInCharClass.ts(4,7): error TS1005: ']' expected.
regExpWithOpenBracketInCharClass.ts(4,8): error TS1501: This regular expression flag is only available when targeting 'es2024' or later.


==== regExpWithOpenBracketInCharClass.ts (3 errors) ====
    const regexes: RegExp[] = [
      /[[]/,  // Valid
      /[[]/u, // Valid
           ~
!!! error TS1501: This regular expression flag is only available when targeting 'es6' or later.
      /[[]/v, // Well-terminated regex with an incomplete character class
          
!!! error TS1005: ']' expected.
           ~
!!! error TS1501: This regular expression flag is only available when targeting 'es2024' or later.
    ];
    